# faucet

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.rust  README.md  entrypoint.sh  faucet_bot.py  pyproject.toml  requirements-dev.txt  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
deploy/akash/: Caddyfile.template  Dockerfile.caddy  README.md  caddy-entrypoint.sh  deploy.yaml  env.example
deploy/akash/smoke/: smoke-key-derivation.sh
src/: calls.rs  chain.rs  config.rs  gate.rs  handlers.rs  main.rs  nonce.rs  pool.rs  signer.rs
tests/: _helpers.py  test_config_cli.py  test_failover.py  test_gate.py  test_handle_request.py  test_helpers.py  test_pool.py  test_sign.py
